# thesis_try_out_app

monolith/: php_make_hash.php
monolith/django/: .htaccess  manage.py  mirror_checker.txt  passenger_wsgi.py  requirements.txt
monolith/testing/: cpu_mem_monolith.csv  db_query_time_monolith.py  fault_tolerance_monolith.py  measure_response_monolith.py  monitor_cpu_mem.py  response_time_monolith.csv  scalability_monolith.py
ms/: collection.json  seed.go
ms/auth_service/: go.mod  go.sum  main copy.go  main.go  seed_mysql.go
ms/auth_service_mysql/: go.mod  go.sum  main.go
ms/front_end_service/: index.html  package-lock.json  package.json  vite.config.js
ms/test_service/: go.mod  go.sum  main.go  seed.go  seed_mysql.go
ms/test_service_pg/: main.go
ms/user_service/: go.mod  main.go
ms_nodejs/auth_service/: index.js  package-lock.json  package.json
ms_nodejs/auth_service_mysql/: index.js  package-lock.json  package.json
ms_nodejs/test_service/: index.js  package-lock.json  package.json
ms_nodejs/test_service_mysql/: index.js  package-lock.json  package.json
ms_nodejs/user_service/: index.js  package-lock.json  package.json
ms_php/auth_service/: config_mysql.php  index.php  index_mysql.php  migrations_mysql.sql  seed_mysql.php
ms_php/test_service/: config_mysql.php  index.php  index_mysql.php  migrations_mysql.sql  seed_mysql.php
ms_php/user_service/: index.php
ms_rust/auth_service_rust/: Cargo.toml
ms_rust/auth_service_rust/src/: main.rs
ms_rust/test_service_rust/: Cargo.toml
ms_rust/test_service_rust/src/: main.rs
(+97 files in other folders)
