[package]
name = "auth_service_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
