[package]
name = "test_service_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
